Massive tibstat changes. Add "soft" updating to dbiface.update_char(). Filter pzls that are followed by a killer death. Fix dbiface.get_pzlocks() limits and world params. Gzip compress outgoing tibstat "standard" pages. Add 3 google adsense ads. Wrappers for table and row styling, and human readable time diffs. Send 304 Not Modified for unchanged style sheet. Fix bug in recent deaths page. Add default page relocation for potential 404s. Change default server port to 80. Fix the CSS to center and expand correctly. New function next_tibiacom_whoisonline_update() to handle tibiacom syncing.

--- a/projects/tibstat/tibstats.css
+++ b/projects/tibstat/tibstats.css
@@ -1,60 +1,70 @@
-/*
-body
-{
-    font-family: Verdana, Arial;
+body {
+    font-family: Verdana;
     background-color: #051122;
     font-size: 10pt;
 }
-
-table
-{
-    font-family: Verdana, Arial;
+#container {
+    display: table;
+    margin-left: auto;
+    margin-right: auto;
+}
+#center {
+    background-color: #FFF2db;
+    min-width: 640px;
+    display: table-cell;
+    width: 0%;
+}
+#left {
+    width: 0%;
+    //width: 160px;
+    min-width: 160px;
+    display:table-cell;
+}
+#menu {
+    background-color: #0D2E2B;
+}
+table {
+    font-family: Verdana;
     font-size: 10pt;
 }
-*/
-a { text-decoration: none; /*font-weight: bold*/}
-a:hover { text-decoration: underline; }
-a:visited { color: Blue; }
-
-a.char { color: Black; font-weight: bold; }
-a.guild { color: Grey; }
-
-a.enemy { color: Red; }
-a.friend { color: Green; }
-a.ally { color: Blue; }
-a.unspec { color: Grey; }
-
-#menu
-{
-    float: left;
-}
-/*
-#content
-{
-    margin: 0 auto;
-    background-color: #FFF2db;
-    width: 600px;
-}
-
-table.stattab
-{
+.stattab {
     width: 100%;
 }
-th
-{
+.stattab th, .stattab td {
+    padding: 2;
+}
+.stattab th {
     font-weight: bold;
     color: white;
     background-color: #505050;
 }
-
-tr.odd
-{
+.stattab tr.odd {
     background-color: #F1E0C6;
 }
-
-tr.even
-{
+.stattab tr.even {
     background-color: #D4C0A1;
 }
-
-*/
+a {
+    text-decoration: none;
+}
+a:hover {
+    text-decoration: underline;
+}
+a:visited {
+    color: Blue;
+}
+a.guild {
+    color: Grey;
+}
+a.enemy {
+    color: Red;
+}
+a.friend {
+    color: Green;
+}
+a.unspec {
+    color: Grey;
+}
+#left a {
+    color: #d7d7d7;
+}
